--- a/indexes/nsc1028/59.md
+++ b/indexes/nsc1028/59.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [王友群：中共两次免于苏共核打击之谜](../../pages/nsc1028/n13624529.md) 
+#### [林辉： 中共优待洗脑日俘 内战中日军贡献大](../../pages/nsc1028/n13624644.md) 
 #### [我们从小到大学到的历史哪些是假的（13）](../../pages/nsc1028/n13623863.md) 
 #### [我们从小到大学到的历史哪些是假的（12）](../../pages/nsc1028/n13619491.md) 
 #### [中共是怎么为自己涂脂抹粉的（10）](../../pages/nsc1028/n13615970.md) 
@@ -28,8 +30,6 @@
 #### [中共罪行录之六十八：取消过年](../../pages/nsc1028/n13546448.md) 
 #### [中共罪行录之六十七：文革是如何大乱起来的](../../pages/nsc1028/n13544416.md) 
 #### [楚一丁：台海两岸的昨日今日和明日](../../pages/nsc1028/n13531468.md) 
-#### [张菁：红色间谍兄弟五人之悲剧人生](../../pages/nsc1028/n13534128.md) 
-#### [中共罪行录之六十六：中共副主席王洪文的奢靡](../../pages/nsc1028/n13527941.md) 
 
 ---
 #### 第 [ [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) ] 页
