--- a/indexes/nsc1035/53.md
+++ b/indexes/nsc1035/53.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [奥运史上的人性之光](../../pages/nsc1035/n13627118.md) 
 #### [云昭：谢燕益的道](../../pages/nsc1035/n13607391.md) 
 #### [簿岚澄：观《过年Ⅱ》随想](../../pages/nsc1035/n13606884.md) 
 #### [云昭：走进窄门的梁小军](../../pages/nsc1035/n13605425.md) 
@@ -29,7 +30,6 @@
 #### [慕容雪儿：如何判断，你看到的世界是否真实？](../../pages/nsc1035/n13332569.md) 
 #### [清荷：叫610的信心怎能不垮？](../../pages/nsc1035/n13304848.md) 
 #### [李疏影：《面试》——一件衣服，改变一生](../../pages/nsc1035/n13292494.md) 
-#### [觅真：从耄耋老人被劫入狱看解体中共的急迫](../../pages/nsc1035/n13284545.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
