--- a/indexes/nsc993/75.md
+++ b/indexes/nsc993/75.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】乌俄之战离中国很远，铁链女离中国人很近](../../pages/nsc993/n13630325.md) 
+#### [巫本添：为无辜的乌克兰人祈祷](../../pages/nsc993/n13629307.md) 
+#### [理悟：说“当权”](../../pages/nsc993/n13629223.md) 
 #### [网友乌衣又遭抓捕，徐州当局到底想干什么？](../../pages/nsc993/n13627859.md) 
 #### [俄乌战争启示录（之三)：台湾从此将更安全](../../pages/nsc993/n13624562.md) 
 #### [一高中生直指央视为俄罗斯入侵乌克兰打掩护](../../pages/nsc993/n13625704.md) 
@@ -27,9 +30,6 @@
 #### [晓晴：那个女子](../../pages/nsc993/n13608462.md) 
 #### [云昭：谢燕益的道](../../pages/nsc993/n13607391.md) 
 #### [真真：浅释“共产党”](../../pages/nsc993/n13607020.md) 
-#### [李春草：论中共的“三化一缺”](../../pages/nsc993/n13607010.md) 
-#### [【网海拾贝】这个大人物到底是谁？](../../pages/nsc993/n13606832.md) 
-#### [在江苏调查组的通报里读到两个字：“吃人”！](../../pages/nsc993/n13606845.md) 
 
 ---
 #### 第 [ [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) ] 页
