have a nice day!

--- a/indexes/nsc1025/172.md
+++ b/indexes/nsc1025/172.md
@@ -1,5 +1,9 @@
 ### 纪元评论：时政评论
 ---
+#### [洪博：铁链女案激起民愤 今年前两月三退292万人](../../pages/nsc1025/n13631278.md) 
+#### [【纪元专栏】学生阅读能力差 进步教学法误人子弟](../../pages/nsc1025/n13632125.md) 
+#### [王友群：美国弗州通过25个反中共活摘器官决议](../../pages/nsc1025/n13629415.md) 
+#### [【名家专栏】俄罗斯入侵乌克兰 中共应受制裁](../../pages/nsc1025/n13630752.md) 
 #### [王赫：俄乌战争助美锁定中共](../../pages/nsc1025/n13630059.md) 
 #### [钟原：中共高层两会期间忽对国际局势表态](../../pages/nsc1025/n13629262.md) 
 #### [程晓农：俄乌战争的德国因素（上篇）](../../pages/nsc1025/n13629244.md) 
@@ -26,10 +30,6 @@
 #### [钟原：中共两会前公布就业人数露马脚](../../pages/nsc1025/n13620466.md) 
 #### [【纪元专栏】政府出钱养媒体 两者愈发没有公信力](../../pages/nsc1025/n13620356.md) 
 #### [【名家专栏】中共的侵略历史与其宣传相悖](../../pages/nsc1025/n13619520.md) 
-#### [李宇明：中共乐见俄乌战争的爆发](../../pages/nsc1025/n13620078.md) 
-#### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc1025/n13619915.md) 
-#### [谢田：乌克兰战争何以让举世失心风？](../../pages/nsc1025/n13619873.md) 
-#### [【名家专栏】驳斥中共少数族裔权利的论调 ](../../pages/nsc1025/n13619490.md) 
 
 ---
 #### 第 [ [172](./172.md) / [171](./171.md) / [170](./170.md) / [169](./169.md) / [168](./168.md) / [167](./167.md) / [166](./166.md) / [165](./165.md) ] 页
