--- a/indexes/nsc1028/59.md
+++ b/indexes/nsc1028/59.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [我们从小到大学到的历史哪些是假的（15）](../../pages/nsc1028/n13632791.md) 
 #### [我们从小到大学到的历史哪些是假的（14）](../../pages/nsc1028/n13630207.md) 
 #### [张菁：批《武训传》 有江青与陶行知的个人恩怨](../../pages/nsc1028/n13629055.md) 
 #### [王友群：中共两次免于苏共核打击之谜](../../pages/nsc1028/n13624529.md) 
@@ -29,7 +30,6 @@
 #### [中共罪行录之七十：上海“红色恐怖”一日](../../pages/nsc1028/n13554515.md) 
 #### [中共罪行录之六十九：拜年歌作者之死](../../pages/nsc1028/n13548579.md) 
 #### [蔡大雅：台湾 为世界点上光明之灯](../../pages/nsc1028/n13531530.md) 
-#### [中共罪行录之六十八：取消过年](../../pages/nsc1028/n13546448.md) 
 
 ---
 #### 第 [ [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) ] 页
