--- a/indexes/nsc993/75.md
+++ b/indexes/nsc993/75.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [欧阳天剑：从香港最近“疫情爆发”说开去](../../pages/nsc993/n13633182.md) 
 #### [【网海拾贝】乌俄之战离中国很远，铁链女离中国人很近](../../pages/nsc993/n13630325.md) 
 #### [巫本添：为无辜的乌克兰人祈祷](../../pages/nsc993/n13629307.md) 
 #### [理悟：说“当权”](../../pages/nsc993/n13629223.md) 
@@ -29,7 +30,6 @@
 #### [自醒：中国掀起了网络文革2.0版](../../pages/nsc993/n13608529.md) 
 #### [晓晴：那个女子](../../pages/nsc993/n13608462.md) 
 #### [云昭：谢燕益的道](../../pages/nsc993/n13607391.md) 
-#### [真真：浅释“共产党”](../../pages/nsc993/n13607020.md) 
 
 ---
 #### 第 [ [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) ] 页
