--- a/indexes/nsc993/75.md
+++ b/indexes/nsc993/75.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】乌克兰用鲜血为台湾写下战争预案](../../pages/nsc993/n13643578.md) 
 #### [传统武术何在？ 新武术以假乱真](../../pages/nsc993/n13641615.md) 
 #### [让世界惊喜的华人中文美声与大赛](../../pages/nsc993/n13641647.md) 
 #### [【网海拾贝】中共打拐是假，打击正义人士是真](../../pages/nsc993/n13641238.md) 
@@ -29,7 +30,6 @@
 #### [郑仁禾：宣传掩盖下的真相](../../pages/nsc993/n13619943.md) 
 #### [中共撤侨不力，留学生泪喊“怎么相信国家？”](../../pages/nsc993/n13619641.md) 
 #### [【网海拾贝】在乌克兰的炮声中，铁链女的哭声反而更清晰了](../../pages/nsc993/n13619568.md) 
-#### [【网海拾贝】中共不能暴露铁链女真实身份的原因](../../pages/nsc993/n13616093.md) 
 
 ---
 #### 第 [ [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) ] 页
