--- a/indexes/nsc993/76.md
+++ b/indexes/nsc993/76.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】一位从美回国的网友如此吐槽](../../pages/nsc993/n13647381.md) 
 #### [袁媛：我是这样看这场俄乌战的](../../pages/nsc993/n13644892.md) 
 #### [觅真：请充当中共的帮凶、打手们引以为戒](../../pages/nsc993/n13644228.md) 
 #### [“中国对外开放的大门不会关上”吗？](../../pages/nsc993/n13644191.md) 
@@ -29,7 +30,6 @@
 #### [李明：疫情中怎样成为不会被感染的人](../../pages/nsc993/n13624890.md) 
 #### [俄乌战争启示录（之二）：中共将成世界民主公敌](../../pages/nsc993/n13624452.md) 
 #### [【网海拾贝】俄乌战争的真正启示：武统台湾没门！](../../pages/nsc993/n13623889.md) 
-#### [俄乌战争启示录（之一)：世界性保守主义回潮](../../pages/nsc993/n13622554.md) 
 
 ---
-#### 第 [ [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) ] 页
+#### 第 [ [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) / [70](./70.md) / [69](./69.md) ] 页
