--- a/indexes/nsc1028/59.md
+++ b/indexes/nsc1028/59.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共罪行录之七十四：“彭德怀反党集团”](../../pages/nsc1028/n13655741.md) 
 #### [王友群：中共表面胜利实际失败的一场战争](../../pages/nsc1028/n13643934.md) 
 #### [我们从小到大学到的历史哪些是假的（15）](../../pages/nsc1028/n13632791.md) 
 #### [我们从小到大学到的历史哪些是假的（14）](../../pages/nsc1028/n13630207.md) 
@@ -29,7 +30,6 @@
 #### [王友群：黄炎培投奔中共 家人惨遭中共迫害](../../pages/nsc1028/n13556189.md) 
 #### [林辉：薄一波自言国民党监狱比中共的强](../../pages/nsc1028/n13555827.md) 
 #### [中共罪行录之七十：上海“红色恐怖”一日](../../pages/nsc1028/n13554515.md) 
-#### [中共罪行录之六十九：拜年歌作者之死](../../pages/nsc1028/n13548579.md) 
 
 ---
 #### 第 [ [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) ] 页
