--- a/indexes/nsc993/76.md
+++ b/indexes/nsc993/76.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】俄乌战争，中共犯“颠覆性战略错误”](../../pages/nsc993/n13655760.md) 
 #### [历弘：沉默者亦是共犯](../../pages/nsc993/n13652799.md) 
 #### [【网海拾贝】2年多了，病毒又回去了](../../pages/nsc993/n13652629.md) 
 #### [燕郊女孩：离家只有2公里，却像隔了一条银河](../../pages/nsc993/n13652450.md) 
@@ -29,7 +30,6 @@
 #### [巫本添：为无辜的乌克兰人祈祷](../../pages/nsc993/n13629307.md) 
 #### [理悟：说“当权”](../../pages/nsc993/n13629223.md) 
 #### [网友乌衣又遭抓捕，徐州当局到底想干什么？](../../pages/nsc993/n13627859.md) 
-#### [俄乌战争启示录（之三)：台湾从此将更安全](../../pages/nsc993/n13624562.md) 
 
 ---
 #### 第 [ [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) / [70](./70.md) / [69](./69.md) ] 页
