have a nice day!

--- a/indexes/nsc993/76.md
+++ b/indexes/nsc993/76.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [川人：汉奸嘴脸，中共替俄国洗地原形毕露？](../../pages/nsc993/n13657995.md) 
+#### [【网海拾贝】中共从不缺席世界性邪恶行径](../../pages/nsc993/n13657799.md) 
+#### [防疫一刀切，令北京“双城记”现悲情一页](../../pages/nsc993/n13657746.md) 
 #### [【网海拾贝】俄乌战争，中共犯“颠覆性战略错误”](../../pages/nsc993/n13655760.md) 
 #### [历弘：沉默者亦是共犯](../../pages/nsc993/n13652799.md) 
 #### [【网海拾贝】2年多了，病毒又回去了](../../pages/nsc993/n13652629.md) 
@@ -27,9 +30,6 @@
 #### [袁斌：邪党的锁链](../../pages/nsc993/n13636247.md) 
 #### [欧阳天剑：从香港最近“疫情爆发”说开去](../../pages/nsc993/n13633182.md) 
 #### [【网海拾贝】乌俄之战离中国很远，铁链女离中国人很近](../../pages/nsc993/n13630325.md) 
-#### [巫本添：为无辜的乌克兰人祈祷](../../pages/nsc993/n13629307.md) 
-#### [理悟：说“当权”](../../pages/nsc993/n13629223.md) 
-#### [网友乌衣又遭抓捕，徐州当局到底想干什么？](../../pages/nsc993/n13627859.md) 
 
 ---
 #### 第 [ [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) / [70](./70.md) / [69](./69.md) ] 页
