--- a/indexes/nsc1026/52.md
+++ b/indexes/nsc1026/52.md
@@ -1,5 +1,6 @@
 ### 纪元评论：财经评论
 ---
+#### [【名家专栏】滞胀即将到来](../../pages/nsc1026/n13658171.md) 
 #### [【财经话题】2022年全球经济的三大挑战](../../pages/nsc1026/n13654423.md) 
 #### [王赫：2022中国经济寒风刺人](../../pages/nsc1026/n13651403.md) 
 #### [【财经话题】油价猛跌27%意味着什么？](../../pages/nsc1026/n13648767.md) 
@@ -29,7 +30,6 @@
 #### [【财经话题】不可低估通胀和高估滞胀风险](../../pages/nsc1026/n13300505.md) 
 #### [何冰：此时，老板们选择背弃华尔街朋友](../../pages/nsc1026/n13295291.md) 
 #### [【财经话题】供应链瓶颈若纾解 滞胀就不会来](../../pages/nsc1026/n13286759.md) 
-#### [何冰：恒大系股价大涨，是否迎来转机？](../../pages/nsc1026/n13276822.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
