have a nice day!

--- a/indexes/nsc1025/175.md
+++ b/indexes/nsc1025/175.md
@@ -1,5 +1,8 @@
 ### 纪元评论：时政评论
 ---
+#### [李明：全球疫情与俄乌战争](../../pages/nsc1025/n13662966.md) 
+#### [周晓辉：俄将军相继阵亡 中共将军们作何感想](../../pages/nsc1025/n13662089.md) 
+#### [郝平：中共坚持“清零”恶政 四大乱象灼烧](../../pages/nsc1025/n13660394.md) 
 #### [【名家专栏】核武器再成为选项](../../pages/nsc1025/n13658148.md) 
 #### [老坛酸菜光脚制作！中国人还要沉默多久？](../../pages/nsc1025/n13659708.md) 
 #### [德叔：全民“打和尚骂道士” 谁教的？](../../pages/nsc1025/n13659746.md) 
@@ -27,9 +30,6 @@
 #### [谢田：乌克兰战争的终结和满世界的疮痍](../../pages/nsc1025/n13653997.md) 
 #### [【纪元专栏】加国能源丰富还靠进口 荒唐！](../../pages/nsc1025/n13648376.md) 
 #### [【名家专栏】俄乌之战如何影响中国粮食安全](../../pages/nsc1025/n13653309.md) 
-#### [周晓辉：慎用辉瑞口服药 中共推广或利益使然](../../pages/nsc1025/n13653571.md) 
-#### [【有冇搞错】朱镕基反对习近平连任](../../pages/nsc1025/n13651375.md) 
-#### [杨威：中共在俄乌战争前后撒了哪些谎？（上）](../../pages/nsc1025/n13648748.md) 
 
 ---
 #### 第 [ [175](./175.md) / [174](./174.md) / [173](./173.md) / [172](./172.md) / [171](./171.md) / [170](./170.md) / [169](./169.md) / [168](./168.md) ] 页
