have a nice day!

--- a/indexes/nsc1025/176.md
+++ b/indexes/nsc1025/176.md
@@ -1,5 +1,6 @@
 ### 纪元评论：时政评论
 ---
+#### [岳山：坠机事件与东航腐败及江绵恒](../../pages/nsc1025/n13665426.md) 
 #### [李正宽：美国出新制裁 中共作恶者该醒了](../../pages/nsc1025/n13664521.md) 
 #### [【名家专栏】通胀可能重击加州学校预算 ](../../pages/nsc1025/n13664967.md) 
 #### [【名家专栏】战争、制裁和美国经济](../../pages/nsc1025/n13662454.md) 
@@ -29,7 +30,6 @@
 #### [金言：中国股市泡沫破灭 资本市场血流成河](../../pages/nsc1025/n13654101.md) 
 #### [钟原：中共政治局常委才开始讨论新一波疫情？](../../pages/nsc1025/n13653873.md) 
 #### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc1025/n13654292.md) 
-#### [【名家专栏】为什么科技股最近大跌](../../pages/nsc1025/n13653268.md) 
 
 ---
-#### 第 [ [175](./175.md) / [174](./174.md) / [173](./173.md) / [172](./172.md) / [171](./171.md) / [170](./170.md) / [169](./169.md) / [168](./168.md) ] 页
+#### 第 [ [176](./176.md) / [175](./175.md) / [174](./174.md) / [173](./173.md) / [172](./172.md) / [171](./171.md) / [170](./170.md) / [169](./169.md) ] 页
