have a nice day!

--- a/indexes/nsc1026/52.md
+++ b/indexes/nsc1026/52.md
@@ -1,5 +1,8 @@
 ### 纪元评论：财经评论
 ---
+#### [数据派：人民币的秘密与外汇的危机](../../pages/nsc1026/n13667092.md) 
+#### [王赫：城投债务违约或是中国金融危机的导火索](../../pages/nsc1026/n13665322.md) 
+#### [【财经话题】美债长空 为何美股却能反弹？](../../pages/nsc1026/n13665895.md) 
 #### [【名家专栏】滞胀即将到来](../../pages/nsc1026/n13658171.md) 
 #### [【财经话题】2022年全球经济的三大挑战](../../pages/nsc1026/n13654423.md) 
 #### [王赫：2022中国经济寒风刺人](../../pages/nsc1026/n13651403.md) 
@@ -27,9 +30,6 @@
 #### [北京证券交易所上市新规解析](../../pages/nsc1026/n13348292.md) 
 #### [【财经话题】也谈“比特币信徒”恶性通胀论](../../pages/nsc1026/n13331972.md) 
 #### [何冰：恒大新闻不断，有钱了吗？](../../pages/nsc1026/n13325002.md) 
-#### [【财经话题】不可低估通胀和高估滞胀风险](../../pages/nsc1026/n13300505.md) 
-#### [何冰：此时，老板们选择背弃华尔街朋友](../../pages/nsc1026/n13295291.md) 
-#### [【财经话题】供应链瓶颈若纾解 滞胀就不会来](../../pages/nsc1026/n13286759.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
