--- a/indexes/nsc993/76.md
+++ b/indexes/nsc993/76.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中国传染病专家质疑中共隔离政策](../../pages/nsc993/n13667190.md) 
+#### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc993/n13666926.md) 
 #### [【网海拾贝】不军援俄罗斯，中共的话能信？](../../pages/nsc993/n13664594.md) 
 #### [清零式严控与“一刀切”下的燕郊](../../pages/nsc993/n13664450.md) 
 #### [【网海拾贝】中共抗疫：病毒都没有你们可怕](../../pages/nsc993/n13662063.md) 
@@ -28,8 +30,6 @@
 #### [理悟：说“两会”提案](../../pages/nsc993/n13643927.md) 
 #### [【网海拾贝】乌克兰用鲜血为台湾写下战争预案](../../pages/nsc993/n13643578.md) 
 #### [传统武术何在？ 新武术以假乱真](../../pages/nsc993/n13641615.md) 
-#### [让世界惊喜的华人中文美声与大赛](../../pages/nsc993/n13641647.md) 
-#### [【网海拾贝】中共打拐是假，打击正义人士是真](../../pages/nsc993/n13641238.md) 
 
 ---
 #### 第 [ [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) / [70](./70.md) / [69](./69.md) ] 页
