--- a/indexes/nsc993/76.md
+++ b/indexes/nsc993/76.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】最后病毒未必防住，人民先崩溃了](../../pages/nsc993/n13672307.md) 
+#### [两位上海市民感染新冠后的亲历记](../../pages/nsc993/n13672217.md) 
 #### [【网海拾贝】中共又干预美国内政了](../../pages/nsc993/n13669564.md) 
 #### [南京双城族：“因为疫情我无家可归了！”](../../pages/nsc993/n13669511.md) 
 #### [东航空难事件董事长答记者问 网友不满](../../pages/nsc993/n13669436.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】一位从美回国的网友如此吐槽](../../pages/nsc993/n13647381.md) 
 #### [袁媛：我是这样看这场俄乌战的](../../pages/nsc993/n13644892.md) 
 #### [觅真：请充当中共的帮凶、打手们引以为戒](../../pages/nsc993/n13644228.md) 
-#### [“中国对外开放的大门不会关上”吗？](../../pages/nsc993/n13644191.md) 
-#### [【投书】给大纪元报和新唐人电视台的公开信](../../pages/nsc993/n13644124.md) 
 
 ---
 #### 第 [ [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) / [70](./70.md) / [69](./69.md) ] 页
