--- a/indexes/nsc1035/53.md
+++ b/indexes/nsc1035/53.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [长风拂泪：观电影《抓捕2》有感](../../pages/nsc1035/n13674277.md) 
 #### [清竹：政法系统的朋友，您明白了吗？](../../pages/nsc1035/n13666721.md) 
 #### [吴玉：《抓捕2》影评——为守住良知的警察点赞](../../pages/nsc1035/n13664510.md) 
 #### [奥运史上的人性之光](../../pages/nsc1035/n13627118.md) 
@@ -29,7 +30,6 @@
 #### [《寻狗》影评：现实版渔夫与金鱼，电影比童话有趣](../../pages/nsc1035/n13389805.md) 
 #### [黄天辰：听“墙外”遥想当年离墙之旅](../../pages/nsc1035/n13377229.md) 
 #### [大峡谷掠影遐思](../../pages/nsc1035/n13354743.md) 
-#### [慕容雪儿：如何判断，你看到的世界是否真实？](../../pages/nsc1035/n13332569.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
