--- a/indexes/nsc993/76.md
+++ b/indexes/nsc993/76.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】可怕的不是病毒，是一刀切的清零](../../pages/nsc993/n13674403.md) 
+#### [关于防疫，网友请中共回答5大类20个问题](../../pages/nsc993/n13674318.md) 
 #### [【网海拾贝】最后病毒未必防住，人民先崩溃了](../../pages/nsc993/n13672307.md) 
 #### [两位上海市民感染新冠后的亲历记](../../pages/nsc993/n13672217.md) 
 #### [【网海拾贝】中共又干预美国内政了](../../pages/nsc993/n13669564.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】美中罗马会谈毫无结果不是好兆头？](../../pages/nsc993/n13649860.md) 
 #### [社会学家：安全关切不能成为一国入侵他国的理由](../../pages/nsc993/n13649744.md) 
 #### [【网海拾贝】一位从美回国的网友如此吐槽](../../pages/nsc993/n13647381.md) 
-#### [袁媛：我是这样看这场俄乌战的](../../pages/nsc993/n13644892.md) 
-#### [觅真：请充当中共的帮凶、打手们引以为戒](../../pages/nsc993/n13644228.md) 
 
 ---
 #### 第 [ [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) / [70](./70.md) / [69](./69.md) ] 页
